unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Manufacturer_City__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_City__c</fullName>
        <description>Manufacturer City</description>
        <inlineHelpText>Manufacturer City</inlineHelpText>
        <label>Manufacturer City</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>