unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Manufacturer_Contact__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Contact__c</fullName>
        <description>Manufacturer Contact</description>
        <inlineHelpText>Manufacturer Contact</inlineHelpText>
        <label>Manufacturer Contact</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>