unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Manufacturer_Device_Analysis_Results__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Device_Analysis_Results__c</fullName>
        <description>Manufacturer’s device analysis results</description>
        <inlineHelpText>Manufacturer’s device analysis results</inlineHelpText>
        <label>Manufacturer’s device analysis results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>