unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Manufacturer_Email__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Email__c</fullName>
        <description>Manufacturer Email</description>
        <inlineHelpText>Manufacturer Email</inlineHelpText>
        <label>Manufacturer E-mail</label>
        <type>Email</type>
    </CustomField>