unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Manufacturer_Fax__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Fax__c</fullName>
        <description>Manufacturer Fax</description>
        <inlineHelpText>Manufacturer Fax</inlineHelpText>
        <label>Manufacturer Fax</label>
        <type>Phone</type>
    </CustomField>