unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Manufacturer_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Name__c</fullName>
        <description>Manufacturer Name</description>
        <inlineHelpText>Manufacturer Name</inlineHelpText>
        <label>Manufacturer Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>