unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Manufacturer_Phone__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Phone__c</fullName>
        <description>Manufacturer Phone</description>
        <inlineHelpText>Manufacturer Phone</inlineHelpText>
        <label>Manufacturer Phone</label>
        <type>Phone</type>
    </CustomField>