unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Manufacturer_Postal_code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Postal_code__c</fullName>
        <description>Postcode</description>
        <inlineHelpText>Postcode</inlineHelpText>
        <label>Manufacturer Postcode</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>