unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Manufacturer_Preliminary_Analysis__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Preliminary_Analysis__c</fullName>
        <label>Manufacturer's preliminary analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>