unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Manufacturer_Reference_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Reference_Number__c</fullName>
        <description>Reference number by manufacturer</description>
        <label>Reference number by manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>