unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Manufacturer_Remedial_Action__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Remedial_Action__c</fullName>
        <description>Remedial action/corrective action/preventive action/Field Safety Corrective Action</description>
        <inlineHelpText>Remedial action/corrective action/preventive action/Field Safety Corrective Action</inlineHelpText>
        <label>RA/CA/PA/FSCA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>