unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Medical_Device_Current_Location__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Medical_Device_Current_Location__c</fullName>
        <description>Medical device current location/disposition (if known)</description>
        <inlineHelpText>Medical device current location/disposition (if known)</inlineHelpText>
        <label>Medical device current location</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>