unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Medical_Device_Distributed_Countries__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Medical_Device_Distributed_Countries__c</fullName>
        <description>For final reports only. The medical device has been distributed to the following countries:</description>
        <inlineHelpText>For final reports only. The medical device has been distributed to the following countries:</inlineHelpText>
        <label>Medical device distributed countries</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Within the EEA, Switzerland and Turkey</fullName>
                </value>
                <value>
                    <fullName>All EEA, Candidate Countries, Switzerland and Turkey</fullName>
                </value>
                <value>
                    <fullName>New List of countries</fullName>
                </value>
                <value>
                    <fullName>Candidate Countries</fullName>
                </value>
                <value>
                    <fullName>ABC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>