unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Medical_Device_Operator_During_Incident__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Medical_Device_Operator_During_Incident__c</fullName>
        <description>Operator of the medical device at the time of incident</description>
        <inlineHelpText>Operator of the medical device at the time of incident</inlineHelpText>
        <label>Medical device operator during incident</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Healthcare Professional</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Proffesional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>