unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Model_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Model_Number__c</fullName>
        <description>Model number</description>
        <inlineHelpText>Model number</inlineHelpText>
        <label>Model number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>