unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Name_of_Healthcare_Facility__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Name_of_Healthcare_Facility__c</fullName>
        <description>Name of the healthcare facility</description>
        <inlineHelpText>Name of the healthcare facility</inlineHelpText>
        <label>Healthcare Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>