unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__NCA_Reference_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__NCA_Reference_Number__c</fullName>
        <description>Reference number assigned by NCA</description>
        <inlineHelpText>Reference number assigned by NCA</inlineHelpText>
        <label>Reference number assigned by NCA</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>