unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Nomenclature_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Nomenclature_Code__c</fullName>
        <description>Nomenclature code</description>
        <inlineHelpText>Nomenclature code</inlineHelpText>
        <label>Nomenclature code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>