unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Nomenclature_System__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Nomenclature_System__c</fullName>
        <description>Nomenclature system</description>
        <inlineHelpText>Nomenclature system</inlineHelpText>
        <label>Unused Nomenclature system</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>