unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Nomenclature_Text__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Nomenclature_Text__c</fullName>
        <description>Nomenclature text</description>
        <inlineHelpText>Nomenclature text</inlineHelpText>
        <label>Nomenclature text</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>