unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__NomenclatureSystem_preferable_GMDN__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__NomenclatureSystem_preferable_GMDN__c</fullName>
        <description>Nomenclature system (preferable GMDN)</description>
        <inlineHelpText>Nomenclature system (preferable GMDN)</inlineHelpText>
        <label>Nomenclature system (preferable GMDN)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GMDN</fullName>
                </value>
                <value>
                    <fullName>UMDNS (ECRI)</fullName>
                </value>
                <value>
                    <fullName>EDMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>