unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Notified_Body_ID_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Notified_Body_ID_Number__c</fullName>
        <description>Notified Body (NB) ID-number</description>
        <inlineHelpText>Notified Body (NB) ID-number</inlineHelpText>
        <label>Notified Body (NB) ID-number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>