unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Number_of_Medical_Devices_Involved__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Number_of_Medical_Devices_Involved__c</fullName>
        <description>Number of medical devices involved</description>
        <inlineHelpText>Number of medical devices involved</inlineHelpText>
        <label>Unused #of medical devices involved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>