unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Number_of_Patients_Involved__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Number_of_Patients_Involved__c</fullName>
        <description>Number of patients involved (if known)</description>
        <inlineHelpText>Number of patients involved (if known)</inlineHelpText>
        <label>Unused #of patients involved (if known)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>