unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Number_of_Similar_Incidents__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Number_of_Similar_Incidents__c</fullName>
        <description>Number of similar incidents</description>
        <inlineHelpText>Number of similar incidents</inlineHelpText>
        <label>Unused Number of similar incidents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>