unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Number_of_similarIncidents__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Number_of_similarIncidents__c</fullName>
        <description>Number of similar incidents</description>
        <inlineHelpText>Number of similar incidents</inlineHelpText>
        <label>Number of similar incidents</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>