unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Numberof_Medical_Devices_Involved__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Numberof_Medical_Devices_Involved__c</fullName>
        <description>Number of medical devices involved (if known)</description>
        <inlineHelpText>Number of medical devices involved (if known)</inlineHelpText>
        <label>No. of medi. devices involved (if known)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>