unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Numberof_patients_involved__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Numberof_patients_involved__c</fullName>
        <description>Number of patients involved (if known)</description>
        <inlineHelpText>Number of patients involved (if known)</inlineHelpText>
        <label>Number of patients involved (if known)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>