unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Other_Countries__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Other_Countries__c</fullName>
        <description>Other Countries (if any)</description>
        <label>Other Countries (if any)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>