unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Other_NCA__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Other_NCA__c</fullName>
        <description>Identify to what other NCA's this report was also sent</description>
        <inlineHelpText>Identify to what other NCA's this report was also sent</inlineHelpText>
        <label>Other NCA's this report was sent to</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>