unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Other_Relevant_History__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Other_Relevant_History__c</fullName>
        <label>Other Relevant History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>