unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Patient_age__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Patient_age__c</fullName>
        <description>Age of the patient at the time of incident, if applicable</description>
        <inlineHelpText>Age of the patient at the time of incident, if applicable</inlineHelpText>
        <label>Patient age at the time of incident</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>