unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Patient_Corrective_Action__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Patient_Corrective_Action__c</fullName>
        <label>Patient Corrective Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>