unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Patient_Identifier__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Patient_Identifier__c</fullName>
        <label>Patient Identifier</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>