unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Patient_Outcome__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Patient_Outcome__c</fullName>
        <description>Patient outcome (Deprecated)</description>
        <inlineHelpText>Patient outcome</inlineHelpText>
        <label>Patient outcome (Deprecated)</label>
        <type>TextArea</type>
    </CustomField>