unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Patient_Weight__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Patient_Weight__c</fullName>
        <description>Weight in kilograms, if applicable</description>
        <inlineHelpText>Weight in kilograms, if applicable</inlineHelpText>
        <label>Patient Weight(in kilograms)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>