unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__PatientOutcome__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__PatientOutcome__c</fullName>
        <description>Patient outcome</description>
        <inlineHelpText>Patient outcome</inlineHelpText>
        <label>Patient outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>