unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Recipient_Name_of_NCA__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Recipient_Name_of_NCA__c</fullName>
        <description>Recipient (Name of NCA)</description>
        <inlineHelpText>Recipient (Name of NCA)</inlineHelpText>
        <label>Recipient (Name of NCA)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>