unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Relevant_Lab_Data__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Relevant_Lab_Data__c</fullName>
        <label>Relevant Lab Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>