unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Remedial_Action__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Remedial_Action__c</fullName>
        <description>Remedial action taken by the healthcare facility relevant to the care of the patient</description>
        <inlineHelpText>Remedial action taken by the healthcare facility relevant to the care of the patient</inlineHelpText>
        <label>Remedial action to care for patient</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>