unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Scheduled_Time_for_Identified_Actions__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Scheduled_Time_for_Identified_Actions__c</fullName>
        <description>Time schedule for the implementation of the identified actions</description>
        <inlineHelpText>Time schedule for the implementation of the identified actions</inlineHelpText>
        <label>Schedule impl. of identified actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>