unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Serial_Numbers__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Serial_Numbers__c</fullName>
        <description>Serial numbers</description>
        <inlineHelpText>Serial numbers</inlineHelpText>
        <label>Serial number(s) (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>