unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Serious_Public_Threat__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Serious_Public_Threat__c</fullName>
        <description>Serious public threat</description>
        <inlineHelpText>Serious public threat</inlineHelpText>
        <label>Incident represent serious public threat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>