unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Signature_2_Performed_By__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Signature_2_Performed_By__c</fullName>
        <label>Signature 2 Performed By</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>