unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Signature_2_Performed_On__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Signature_2_Performed_On__c</fullName>
        <label>Signature 2 Performed On</label>
        <type>DateTime</type>
    </CustomField>