unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Software_Version__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Software_Version__c</fullName>
        <description>Software version number</description>
        <inlineHelpText>Software version number</inlineHelpText>
        <label>Software version number (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>