unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Status_of_Submitter__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Status_of_Submitter__c</fullName>
        <description>Status of submitter</description>
        <inlineHelpText>Status of submitter</inlineHelpText>
        <label>Status of submitter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Authorised Representative within EEA, Switzerland and Turkey</fullName>
                </value>
                <value>
                    <fullName>Others: (identify the role)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>