unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Submitter_Address__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Submitter_Address__c</fullName>
        <description>Submitter Address</description>
        <inlineHelpText>Submitter Address</inlineHelpText>
        <label>Submitter Address</label>
        <type>TextArea</type>
    </CustomField>