unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Submitter_City__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Submitter_City__c</fullName>
        <description>Submitter City</description>
        <inlineHelpText>Submitter City</inlineHelpText>
        <label>Submitter City</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>