unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Submitter_Contact__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Submitter_Contact__c</fullName>
        <description>Submitter's Contact</description>
        <inlineHelpText>Submitter's Contact</inlineHelpText>
        <label>Submitter Contact</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>