unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Submitter_Country__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Submitter_Country__c</fullName>
        <description>Submitter Country</description>
        <inlineHelpText>Submitter Country</inlineHelpText>
        <label>Unused Country</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>