unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Submitter_Email__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Submitter_Email__c</fullName>
        <description>Submitter Email</description>
        <inlineHelpText>Submitter Email</inlineHelpText>
        <label>Submitter E-mail</label>
        <type>Email</type>
    </CustomField>