unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Submitter_Fax__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Submitter_Fax__c</fullName>
        <description>Submitter Fax</description>
        <inlineHelpText>Submitter Fax</inlineHelpText>
        <label>Submitter Fax</label>
        <type>Phone</type>
    </CustomField>