unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Submitter_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Submitter_Name__c</fullName>
        <description>Submitter's Name</description>
        <inlineHelpText>Submitter's Name</inlineHelpText>
        <label>Submitter’s name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>