unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Submitter_Phone__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Submitter_Phone__c</fullName>
        <description>Submitter Phone</description>
        <inlineHelpText>Submitter Phone</inlineHelpText>
        <label>Submitter Phone</label>
        <type>Phone</type>
    </CustomField>