unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Submitter_Postal_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Submitter_Postal_Code__c</fullName>
        <description>Submitter Postal Code</description>
        <inlineHelpText>Submitter Postal Code</inlineHelpText>
        <label>Submitter Postcode</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>